--- a/package.json
+++ b/package.json
@@ -19,39 +19,43 @@
   "main": "index.js",
   "dependencies": {
     "chart.js": "^3.7.1",
-    "core-js": "^3.21.1",
+    "core-js": "^3.22.3",
     "iconv-lite": "^0.6.3",
-    "vue": "^3.2.31",
+    "vue": "^3.2.33",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@types/electron-devtools-installer": "^2.2.1",
+    "@mizarjp/yaneuraou.k-p": "^7.1.0-alpha.11",
+    "@mizarjp/yaneuraou.komoringheights-mate": "^0.5.0-kh.7",
+    "@mizarjp/yaneuraou.material": "^7.1.0-alpha.11",
+    "@mizarjp/yaneuraou.material9": "^7.1.0-alpha.11",
+    "@types/electron-devtools-installer": "^2.2.2",
     "@types/jest": "^27.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "@vue/cli-plugin-babel": "~5.0.4",
     "@vue/cli-plugin-eslint": "~5.0.4",
     "@vue/cli-plugin-typescript": "~5.0.4",
     "@vue/cli-plugin-unit-jest": "~5.0.4",
     "@vue/cli-plugin-vuex": "~5.0.4",
     "@vue/cli-service": "~5.0.4",
-    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/compiler-sfc": "^3.2.33",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "@vue/test-utils": "^2.0.0-rc.19",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
-    "electron": "^18.0.3",
+    "@vue/test-utils": "^2.0.0-rc.21",
+    "@vue/vue3-jest": "^27.0.0",
+    "electron": "^18.2.0",
     "electron-builder": "^23.0.4",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.6.0",
+    "eslint-plugin-vue": "^8.7.1",
     "license-checker": "^25.0.1",
     "prettier": "^2.6.2",
     "spectron": "^19.0.0",
     "ts-jest": "^27.1.4",
-    "ts-loader": "^8.3.0",
-    "typescript": "~4.6.3",
+    "ts-loader": "^9.3.0",
+    "typescript": "~4.6.4",
     "vue-cli-plugin-electron-builder": "^3.0.0-alpha.4"
   }
 }
